--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,7 @@
 {
   "compilerOptions": {
-    "types": [
-      "node"
-    ],
-    "strict": true,
-    "strictFunctionTypes": false,
-    "target": "es2016",
-    "module": "commonjs",
     "moduleResolution": "node",
-    "preserveConstEnums": true,
-    "removeComments": true,
-    "sourceMap": true,
-    "outDir": "dist",
-    "lib": [
-      "es2016"
-    ],
-    "allowSyntheticDefaultImports": false
+    "outDir": "dist"
   },
   "include": [
     "src/**/*.ts",
